--- a/src/index.html
+++ b/src/index.html
@@ -11,5 +11,7 @@
   <body>
     <!-- ❗️❗️❗️ Add partials like so for every page -->
     <include src="./partials/example.html"></include>
+    <include src="./partials/gallery.html"></include>
+    <include src="./partials/header.html"></include>
   </body>
 </html>
